Change Log:

**2/4/16**
- Added base +4% CHC for Sharpshooter
- Added support for parsing Caldesann's Repair dexterity bonus from hero profile

**2/3/16**
- Added Broken Promises

**1/21/16**
- Fixed S6 damage (was in log but not included in calculations)
- Cooldown skills (Vengeance, RoV, FoK) now start immediately and Vengeance/Seethe no longer waits until hatred has been reduced before starting

**1/13/16**
- Added Karlei's Point 
- Added Sword of Ill Will 
- Added Endless Walk
- Fixed import of legendary powers for Manticore and Dawn from battle.net profile
- Added new situational input for "percent time moving" which applies to Hexing Pants and Endless Walk
- Removed "percent time moving" from Hexing Pants special input
- Added checkbox for "Other Sets" (for Legacy of Nightmares) to indicate a Set other than those displayed in the calculator is being worn
- Added Shadow Set
- Added support for Melee weapons (not enforced in skill selection, and don't have fps/breakpoint data for melee weapons yet)

**1/12/16**

- Updated (mostly) for 2.4, still need to implement Shadow set, melee weapons and a few other things
-- Updated primary skills hatred generation
-- Updated damage for Cluster Arrow runes
-- Replaced Multishot's Burst Fire rune with Wind Chill (todo: implement crit chance buff effect from this rune)
-- Updated Vengeance damage
-- Updated damage bonus from M4, M6
-- Updated hatred from UE2 and damage bonus from U4, UE6
-- Updated RoV CDR from N2 and duration of N6 buff
-- Added Manticore (todo: import legendary power)
-- Added Dawn (todo: import legendary power)
-- Added new Legacy of Nightmares set bonus

**10/13/15**

- The form now saves the hero list

**9/17/15**

- Added item level (70) to item tooltip links
- Added links to bnet career profile and hero profile for leaderboard view
- Put legend table into a scrollable window (since it is so large)
- Added Wreath of Lightning
- Added Mirinae, Teardrop of the Starweaver

**9/16/15**
